[package]
name = "hot_ice"
version = "0.3.0"
edition = "2024"

[lib]
crate-type = ["lib"]

[features]
debug = ["dep:iced_devtools", "dep:iced_debug"]
time-travel = ["iced_devtools/time-travel"]

[dependencies]
hot_ice_macros = { path = "hot_ice_macros" }
once_cell = "1.21.3"
crossfire = "2.1.7"
libloading = "^0.8"
log = "^0.4"
notify = "8.2.0"
notify-debouncer-full = "0.6.0"
thiserror = "2.0"
crc32fast = "1.5.0"
iced_winit = { git = "https://github.com/iced-rs/iced.git", branch = "master" }
iced_core = { git = "https://github.com/iced-rs/iced.git", branch = "master" }
iced_futures = { git = "https://github.com/iced-rs/iced.git", branch = "master" }
iced_widget = { git = "https://github.com/iced-rs/iced.git", branch = "master" }
iced_devtools = { git = "https://github.com/iced-rs/iced.git", branch = "master", optional = true }
iced_debug = { git = "https://github.com/iced-rs/iced.git", branch = "master", optional = true }
cargo_metadata = "0.23.1"
